--- a/config/template.html
+++ b/config/template.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>🦉 Bubo Reader</title>
+  <title>📰 Carter's RSS Feeds</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body>
-  <h1>🦉 Bubo Reader</h1>
+  <h1>📰 Carter's RSS Feeds</h1>
 
   {% for group, feeds in data %}
   <h2>{{ group }}</h2>
@@ -46,7 +46,6 @@
     Powered by
     <a href="https://github.com/georgemandis/bubo-rss">Bubo Reader (v{{ info.version }})</a>, a project by <a
       href="https://george.mand.is">George Mandis</a>. ❤️
-    <a href="{{ info.funding.url }}">Sponsor on GitHub</a>
   </p>
 </body>
 
