Add SVG favicon and webapp manifest

--- a/config/template.html
+++ b/config/template.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>📰 Carter's RSS Feeds</title>
+  <link rel="icon" href="news-emoji.svg" sizes="any" type="image/svg+xml">
   <link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="manifest.json" />
 </head>
 
 <body>
