--- a/config/template.html
+++ b/config/template.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <h1>📰 Carter's RSS Feeds</h1>
+  <h1>Carter's RSS Feeds</h1>
 
   {% for group, feeds in data %}
   <h2>{{ group }}</h2>
