--- a/config/template.html
+++ b/config/template.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>📰 Carter's RSS Feeds</title>
+  <title>Carter's RSS Feeds</title>
   <link rel="icon" href="news-emoji.svg" sizes="any" type="image/svg+xml">
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
 </head>
 
 <body>
-  <h1>Carter's RSS Feeds</h1>
+  <h1>📰 Carter's RSS Feeds</h1>
 
   {% for group, feeds in data %}
   <h2>{{ group }}</h2>
