--- a/config/template.html
+++ b/config/template.html
@@ -12,44 +12,51 @@
 </head>
 
 <body>
-  <h1>📰 Carter's RSS Feeds</h1>
-
-  {% for group, feeds in data %}
-  <h2>{{ group }}</h2>
-  {% for feed in feeds %}
-  <details>
-    <summary>
-      <span class="feed-title">{{ feed.title }}</span>
-      <span class="feed-url">({{ feed.feed }})</span>
-    </summary>
-    <ul>
-      {% for item in feed.items %}
-      <li class="{% if item.isRecent %}has-recent{% endif %}">
-        <div><a class="article-title" href="{{ item.link }}" target="_blank" rel="noopener norefferer nofollow">{{
-            item.title }}</a>
-          <div class="article-timestamp">{{ item.timestamp | relative }}</div>
-      </li>
+  <header>
+    <h1>📰 Carter's RSS Feeds</h1>
+  </header>
+  <main>
+    {% for group, feeds in data %}
+    <section>
+      <h2>{{ group }}</h2>
+      {% for feed in feeds %}
+      <details>
+        <summary>
+          <span class="feed-title">{{ feed.title }}</span>
+          <span class="feed-url">({{ feed.feed }})</span>
+        </summary>
+        <ul>
+          {% for item in feed.items %}
+          <li class="{% if item.isRecent %}has-recent{% endif %}">
+            <div><a class="article-title" href="{{ item.link }}" target="_blank" rel="noopener norefferer nofollow">{{
+                item.title }}</a>
+              <div class="article-timestamp">{{ item.timestamp | relative }}</div>
+          </li>
+          {% endfor %}
+        </ul>
+      </details>
+      {% endfor %}
+    </section>
+    {% endfor %}
+    {% if errors | length > 0 %}
+    <h2>Errors</h2>
+    <p>There were errors trying to parse these feeds:</p>
+    <ul class="errors">
+      {% for error in errors %}
+      <li>{{ error }}</li>
       {% endfor %}
     </ul>
-  </details>
-  {% endfor %} {% endfor %} {% if errors | length > 0 %}
-  <h2>Errors</h2>
-  <p>There were errors trying to parse these feeds:</p>
-  <ul class="errors">
-    {% for error in errors %}
-    <li>{{ error }}</li>
-    {% endfor %}
-  </ul>
-  {% endif %}
-
-  <br />
-  <hr />
-  <p>Last updated {{ now }}.</p>
-  <p>
-    Powered by
-    <a href="https://github.com/georgemandis/bubo-rss">Bubo Reader (v{{ info.version }})</a>, a project by <a
-      href="https://george.mand.is">George Mandis</a>. ❤️
-  </p>
+    {% endif %}
+  </main>
+  <footer>
+    <hr>
+    <p>Last updated {{ now }}.</p>
+    <p>
+      Powered by
+      <a href="https://github.com/georgemandis/bubo-rss">Bubo Reader (v{{ info.version }})</a>, a project by <a
+        href="https://george.mand.is">George Mandis</a>. ❤️
+    </p>
+  </footer>
 </body>
 
 </html>
