--- a/config/template.html
+++ b/config/template.html
@@ -23,7 +23,7 @@
       <details>
         <summary>
           <span class="feed-title">{{ feed.title }}</span>
-          <span class="feed-url">({{ feed.feed }})</span>
+          <span class="feed-url" title="{{feed.feed}}">({{ feed.feed }})</span>
         </summary>
         <ul>
           {% for item in feed.items %}
