--- a/config/template.html
+++ b/config/template.html
@@ -52,6 +52,9 @@
     <hr>
     <p>Last updated {{ now }}.</p>
     <p>
+      <a href="https://github.com/carterworks/rss-reader">View on GitHub</a>
+    </p>
+    <p>
       Powered by
       <a href="https://github.com/georgemandis/bubo-rss">Bubo Reader (v{{ info.version }})</a>, a project by <a
         href="https://george.mand.is">George Mandis</a>. ❤️
