--- a/config/template.html
+++ b/config/template.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Carter's RSS Feeds</title>
   <link rel="icon" href="news-emoji.svg" sizes="any" type="image/svg+xml">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link rel="manifest" href="manifest.json" />
   <script type="module" defer>
     /**
@@ -98,7 +98,7 @@
   </script>
 </head>
 
-<body>
+<body class="font-system text-lg">
   <header>
     <h1>📰 Carter's RSS Feeds</h1>
   </header>
