--- a/config/template.html
+++ b/config/template.html
@@ -98,35 +98,45 @@
   </script>
 </head>
 
-<body class="font-system text-lg">
-  <header>
+<body class="font-system bg-arc-background text-base m-4">
+  <header class="text-2xl text-arc-title">
     <h1>📰 Carter's RSS Feeds</h1>
   </header>
-  <main>
+  <main class="grid gap-4 grid-cols-[repeat(auto-fill,_minmax(300px,_1fr))] mt-2">
     {% for group, feeds in data %}
-    <section>
-      <h2>{{ group }}</h2>
+    <section class="">
+      <h2 class="text-xl">{{ group }}</h2>
       {% for feed in feeds %}
-      <details>
-        <summary>
-          <span class="feed-title">{{ feed.title }}</span>
-          <span class="feed-url" title="{{feed.feed}}">({{ feed.feed }})</span>
+      <details class="group">
+        <summary class="cursor-pointer p-2 rounded-xl mt-1 transition-colors group-has-[.has-recent]:border-2 group-has-[.has-recent]:border-arc-title hover:bg-arc-hover flex flex-row items-center">
+          {% if feed.hasRecent %}
+          <div class="text-xl mr-2" aria-label="Feed has recent items">✳︎</div>
+          {% endif %}
+          <div>
+            <div>{{ feed.title }}</div>
+            <div class="text-sm text-arc- whitespace-nowrap text-ellipsis w-5/6 overflow-hidden text-arc-subtitle" title="{{feed.feed}}">({{ feed.feed }})</div>
+          </div>
         </summary>
-        <ul>
+        <ul class="max-h-64 overflow-y-auto list-none m-0">
           {% for item in feed.items %}
-          <li class="{% if item.isRecent %}has-recent{% endif %}">
-            <div>
-              <a class="article-title" href="{{ item.link }}" target="_blank" rel="noopener norefferer nofollow">{{
-                item.title | safe}}</a>
-            </div>
-            <div class="article-timestamp">
-              <relative-time data-time="{{item.timestamp}}">{{ item.timestamp | relative}}</relative-time>
-            </div>
-            {% if yazzyUrl %}
-            <div class="article-links">
-              <a href="{{ yazzyUrl }}/{{ item.link }}" target="_blank" rel="noreferrer noopener">yazzy</a>
-            </div>
+          <li class="{% if item.isRecent %}has-recent border-2 border-arc-title{% endif %} flex flex-row items-center p-2 rounded-xl mt-1 transition-colors hover:bg-arc-hover">
+            {% if item.isRecent %}
+            <div class="text-xl mr-2" aria-label="Item is recent">✳︎</div>
             {% endif %}
+            <div>
+              <div>
+                <a class="article-title" href="{{ item.link }}" target="_blank" rel="noopener norefferer nofollow">{{
+                  item.title | safe}}</a>
+              </div>
+              <div class="text-sm text-arc-subtitle">
+                <relative-time data-time="{{item.timestamp}}">{{ item.timestamp | relative}}</relative-time>
+              </div>
+              {% if yazzyUrl %}
+              <div class="text-sm text-arc-subtitle">
+                <a href="{{ yazzyUrl }}/{{ item.link }}" target="_blank" rel="noreferrer noopener">yazzy</a>
+              </div>
+              {% endif %}
+            </div>
           </li>
           {% endfor %}
         </ul>
@@ -136,11 +146,11 @@
     {% endfor %}
   </main>
   {% if errors | length > 0 %}
-  <h2>Errors</h2>
+  <h2 class="text-xl">Errors</h2>
   <p>There were errors trying to parse these feeds:</p>
   <ul class="errors">
     {% for error in errors %}
-    <li>{{ error }}</li>
+    <li class="break-all">{{ error }}</li>
     {% endfor %}
   </ul>
   {% endif %}
